hphp/test/quick/FPushObjMethod.php.expectf
Test begin
In C::__construct()
In C::__construct()
In C::sMeth()
In C::__construct()
In C::__construct()
In I::__construct()
In I::__construct()
In C::__construct()
In C::__construct()
In C::sMeth()
In C::__construct()
In C::__construct()
In I::__construct()
In I::__construct()
=== X ===
In anon()
  In X::fPublic()
In W::fW()
  In X::fPublic()
In X::fX()
  In X::fPrivateX()
  In X::fPrivate()
  In X::fProtected()
  In X::fPublic()
=== Y ===
In anon()
  In Y::fPublic()
In W::fW()
  In Y::fPublic()
In X::fX()
  In X::fPrivateX()
  In X::fPrivate()
  In Y::fProtected()
  In Y::fPublic()
In Y::fY()
  In Y::fPrivateY()
  In Y::fPrivate()
  In Y::fProtected()
  In Y::fPublic()
=== Z ===
In anon()
  In Z::fPublic()
In W::fW()
  In Z::fPublic()
In X::fX()
  In X::fPrivateX()
  In X::fPrivate()
  In Z::fProtected()
  In Z::fPublic()
In Y::fY()
  In Y::fPrivateY()
  In Y::fPrivate()
  In Z::fProtected()
  In Z::fPublic()
In Z::fZ()
  In Z::fPrivateZ()
  In Z::fPrivate()
  In Z::fProtected()
  In Z::fPublic()

Fatal error: Function name must be a string in %s on line 139
